<resources>
    <string name="app_name">Coursedy</string>
    <string name="sign_in">Sign in with VIT mail id</string>
    <string name="signin">Sign in</string>
    <string name="logo">logo</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name</string>
    <string name="email">Email id</string>
    <string name="add_course_activity_text">Add new course/activity</string>
    <string name="add_course_text">Add new course</string>
    <string name="add_activity_text">Add new activity</string>
    <string name="course_code">Course Code</string>
    <string name="course_code_text">Enter Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="activity_name">Activity Name</string>
    <string name="course_name_text">Enter Course Name</string>
    <string name="activity_name_text">Enter Activity Name</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Do you want to Logout?</string>
    <string name="CActivity">Activity</string>
    <string name="course">Course</string>
    <string name="complete_text">0/7 Completed</string>
    <string name="pending">Pending</string>
</resources>