<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="always"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/profile"
            app:showAsAction="always"/>

        <item
            android:id="@+id/floating_bg"
            android:title=""
            app:showAsAction="always"/>

       <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help"
            android:title="@string/about"
            app:showAsAction="always"/>

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_power_off"
            android:title="@string/logout"
            app:showAsAction="always"/>


</menu>