<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350sp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="30sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialogbg">


            <TextView
                android:id="@+id/add_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/add_activity_text"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                app:srcCompat="@drawable/ic_baseline_close_24" />

            <TextView
                android:id="@+id/course_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_activity"
                android:layout_marginHorizontal="15sp"
                android:layout_marginTop="10sp"
                android:paddingHorizontal="10sp"
                android:paddingVertical="5sp"
                android:text="@string/activity_name"
                android:textColor="@color/white"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_name_text"
                android:layout_marginHorizontal="15sp"
                android:layout_marginTop="5sp"
                android:background="@drawable/edittextbg"
                android:hint="@string/activity_name_text"
                android:inputType="text"
                android:minHeight="48sp"
                android:paddingHorizontal="15sp"
                android:paddingVertical="5sp"
                android:textColorHint="#312C3A"
                android:textSize="22sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_name"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="40sp"
                android:backgroundTint="@color/lightblue"
                android:paddingHorizontal="15sp"
                android:paddingVertical="5sp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:cornerRadius="12sp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>